Fixes vertical spacing

--- a/themes/rstudio-docs-theme/static/css/style.css
+++ b/themes/rstudio-docs-theme/static/css/style.css
@@ -901,9 +901,11 @@ h1.header {
     border-top: 1px solid #96ADAA
      }
     .side-menu__item__link__icon {
+      padding: 15px 0 0 0;
       width: 22px; }
     .side-menu__item__link__text {
       color: #142D3C;
+      padding: 15px 0 0 0;
       margin-left: 8px;
       font-weight: 300;
       letter-spacing: 0.05em;
